syntax = "proto3";

package user;
option go_package = "/user";

//import "google/api/annotations.proto";
//import "models.proto";

message CreateUserRequest{
    string first_name = 1;
    string email = 2;
    uint32 role_id = 3;
}

message GetUsersRequest{
    // Get all users
}

message GetUserRequest{
    uint32 id = 1;
}

message UpdateUserRequest{
    uint32 id = 1;
    string first_name = 2;
    string email = 3;
    uint32 role_id = 4;
}

message DeleteUserRequest{
    uint32 id = 1;
}

message GetUsersResponse{
//    user model
}

message Response{
    string message = 1;
}

service UserService{
    rpc Create(CreateUserRequest) returns (Response) {
    /*    option (google.api.http) = {
            post = /api/users
        };
    */
    }

    rpc GetUsers(GetUsersRequest) returns (Response) {
        // option
    }

    rpc Get (GetUserRequest) returns (Response) {
        // option
    }

    rpc Update (UpdateUserRequest) returns (Response) {
        // option
    } 

    rpc Delete (DeleteUserRequest) returns (Response) {
        // option
    }
}